--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,11 @@
 					<artifactId>roboguice</artifactId>
 					<version>3.0.1</version>
 				</dependency> -->
-				<dependency>
+				<!-- <dependency>
 					<groupId>com.google.dagger</groupId>
 					<artifactId>dagger</artifactId>
 					<version>2.0</version>
-				</dependency>
+				</dependency> -->
 				
   </dependencies>
 </project>
